--- a/website component - why/css/styles.css
+++ b/website component - why/css/styles.css
@@ -19,10 +19,12 @@ body{
 .flex-child {
     flex: 1;
     border: 2px;
+    padding: 0;
 }  
 
 .flex-child:first-child {
-    margin-right: 20px;
+    margin-right: 0;
+    padding: 0;
 } 
 
 .green p{
@@ -32,6 +34,7 @@ body{
   margin:0 0 0 100px;
   width: 50%; 
   height: auto;
+  padding: 0;
   
 }
 
