--- a/website component - about me/css/styles.css
+++ b/website component - about me/css/styles.css
@@ -7,31 +7,48 @@ body{
 
 
 /*designing about me*/
+.container {
+  ...
+  position: relative;
+}
+
 .circle{
-  position: absolute;
+ 
 background: linear-gradient(#cc66ff, #9966ff);
 mix-blend-mode: darken;
-     margin:180px;
-     margin-left: 600px;
+     /*margin:180px;
+     margin-left: 600px;*/
      height:230px;
      width:230px;
      border-radius: 120px;
      text-align: center;
+     position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: -25px 0 0 -25px;
+  z-index: 2;
 
      
 }
 .circle p{
   font-size: 1rem;
+  z-index: 3;
 }
 
 img{
-  margin:100px;
-  margin-left:440px;
-  height: 15%;
-  width: 15%;
+  position: absolute;
+  top: 40%;
+  left: 36%;
+  margin: -25px 0 0 -25px;
+  height: auto;
+  width: 100%;
+  z-index: 1;
 
 }
-
+img:not(.png) {
+  width: 15%;
+}       
+  
 
 
 /********** Large devices only **********/
@@ -43,7 +60,19 @@ img{
 
 /********** Medium devices only **********/
 @media (min-width: 992px) and (max-width: 1199px) {
-  /* Header */
+   img{
+  position: absolute;
+  top: 44%;
+  left: 34%;
+  margin: -25px 0 0 -25px;
+  height: auto;
+  width: 100%;
+  z-index: 1;
+}
+  img:not(.png) {
+  width: 20%;
+}   
+  
   
 
   
@@ -51,34 +80,38 @@ img{
 
 /********** Small devices only **********/
 @media (min-width: 768px) and (max-width: 991px) {
-	#main-contain{
-	width: 45%;
-
-	}
+   img{
+  position: absolute;
+  top: 44%;
+  left: 34%;
+  margin: -25px 0 0 -25px;
+  height: auto;
+  width: 100%;
+  z-index: 1;
+}
+	img:not(.png) {
+  width: 20%;
+}   
 	
 }
 
 /********** Extra small devices only **********/
 @media (max-width: 767px) {
-  
-  #main-contain{
-	width: 45%;}
-}
-
-  /*design about me*/
-  /*.circle{
+  img{
   position: absolute;
-background: linear-gradient(#cc66ff, #9966ff);
-mix-blend-mode: darken;
-     margin:180px;
-     margin-left: 300px;
-     height:230px;
-     width:230px;
-     border-radius: 120px;
-     text-align: center;
-
-     
+  top: 44%;
+  left: 21%;
+  margin: -25px 0 0 -25px;
+  height: auto;
+  width: 100%;
+  z-index: 1;
 }
+  img:not(.png) {
+  width: 35%;
+}   
+  
+}
+
 
 
 
